# HardLoop

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  eula.txt  get_mc_serv.py  observer.py  server.properties
.github/workflows/: release.yaml
hardloop/: pyproject.toml
hardloop/hardloop/: discord.py  get_serv_jar.py  main.py  observer.py  server.py
