[tool.poetry]
name = "hardloop"
version = "0.1.0"
description = ""
authors = ["Louis Labeyrie <labeyrielouis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
mcrcon = "^0.7.0"
aioping = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
